# KuiperLLama

./: .clang-format  CMakeLists.txt  ReadMe.md  main.cpp  main.cu  readme.md
cmake/: cuda.cmake
demo/: CMakeLists.txt  main.cpp  main_qwen.cpp
hf_infer/: llama3_infer.py  qwen2_infer.py
include/base/: alloc.h  base.h  buffer.h
include/math/: eigen_helper.h
include/model/: config.h  llama2.h  llama2_config.h  model.h
include/op/: add.h  embedding.h  embedding_layer.h  encode.h  encode_layer.h  layer.h  matmul.h  mha.h  rmsnorm.h  rmsnorm_layer.h  rope.h  softmax.h  swiglu.h
include/sampler/: argmax_sampler.h  mult_sampler.h  sampler.h
include/tensor/: tensor.h
kuiper/include/base/: alloc.h  base.h  blas_helper.h  cuda_config.h  tick.h  tiktoken.h
kuiper/include/model/: config.h  llama2.h  llama3.h  model.h  qwen2.h  raw_model_data.h
kuiper/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
kuiper/include/sampler/: argmax_sampler.h  sampler.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp  unicode-data.cpp  unicode.cpp
kuiper/source/model/: llama2.cpp  llama3.cpp  model.cpp  qwen2.cpp  raw_model_data.cpp
kuiper/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
kuiper/source/op/kernels/: add_kernel.cpp  add_kernel_i.cpp  add_kernel_i.h  emb_kernel.cpp  emb_kernel_i.cpp  emb_kernel_i.h  kernels_interface.h  kernels_interfaces.cpp  matmul_kernel.cpp  matmul_kernel_i.cpp  matmul_kernel_i.h  mha_kernel.cpp  mha_kernel.h  mha_kernel_i.cpp  mha_kernel_i.h  rms_kernel_i.cpp  rms_kernel_i.h  rope_kernel.cpp  rope_kernel_i.cpp  rope_kernel_i.h  scale_tensor_i.cpp  scale_tensor_i.h  softmax_kernel.h  softmax_kernel_i.cpp  softmax_kernel_i.h  swiglu_kernel_i.cpp  swiglu_kernel_i.h
kuiper/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
kuiper/source/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  add_kernel_cu.cu  add_kernel_cu.cuh  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_cutlass.cu  matmul_cutlass.cuh  matmul_kernel.cu  matmul_kernel.cuh  matmul_kernel_cu.cu  matmul_kernel_cu.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel_cu.cu  rmsnorm_kernel_cu.cuh  rope_kernel.cu  rope_kernel.cuh  rope_kernel_cu.cu  scale_kernel.cu  scale_kernel_cu.cu  scale_kernel_cu.cuh  scale_sum_kernel.cu  scale_sum_kernel.cuh  softmax_kernel.cu  softmax_kernel.cuh  softmax_kernel_cu.cu  swiglu_kernel.cu  swiglu_kernel.cuh  swiglu_kernel_cu.cu  utils.cuh
kuiper/source/sampler/: argmax_sampler.cpp  mult_sampler.cpp
kuiper/source/tensor/: tensor.cpp
source/alloc/: alloc_cpu.cpp  cpu_alloc.cpp
source/base/: alloc_cpu.cpp  base.cpp  buffer.cpp
source/buffer/: buffer.cpp
source/model/: llama2.cpp  model.cpp
source/op/: add.cpp  embedding.cpp  embedding_layer.cpp  encode.cpp  encode_layer.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rmsnorm_layer.cpp  rmsnormr.cpp  rope.cpp  softmax.cpp  swiglu.cpp
source/op/kernels/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  swiglu_kernel.cpp
source/sampler/: argmax_sampler.cpp
source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_add.cpp  test_buffer.cpp  test_cu.cu  test_cu.cuh  test_cu_wrap.cpp  test_main.cpp  test_math.cpp  test_tensor.cpp  utils.cu  utils.cuh
test/optimized/: test_allocator.cpp
test/test_cu/: test_cu_wrap.cpp
test/test_model/: test_llama_cpu.cpp
test/test_op/: test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scale.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
tools/: config.json  export.py  export_qwen2.py  model_qwen2.py
